[gd_scene load_steps=111 format=2]

[ext_resource path="res://interface/menus/MenuTitle.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #7.png" type="Texture" id=2]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #6.png" type="Texture" id=3]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #5.png" type="Texture" id=4]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #4.png" type="Texture" id=5]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #3.png" type="Texture" id=6]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 900 pm.png" type="Texture" id=7]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 200 am.png" type="Texture" id=8]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/200 pm.png" type="Texture" id=9]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 300 pm.png" type="Texture" id=10]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #13.png" type="Texture" id=11]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #4.png" type="Texture" id=12]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #9.png" type="Texture" id=13]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/200 am.png" type="Texture" id=14]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/100 pm.png" type="Texture" id=15]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/700 pm.png" type="Texture" id=16]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/300 am.png" type="Texture" id=17]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/600 am.png" type="Texture" id=18]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/600 pm.png" type="Texture" id=19]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/700 am.png" type="Texture" id=20]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/800 pm.png" type="Texture" id=21]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/800 am.png" type="Texture" id=22]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/midnight.png" type="Texture" id=23]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/900 am.png" type="Texture" id=24]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/900 pm.png" type="Texture" id=25]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/1000 am.png" type="Texture" id=26]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/1000 pm.png" type="Texture" id=27]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/1100 am.png" type="Texture" id=28]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/1100 pm.png" type="Texture" id=29]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/noon.png" type="Texture" id=30]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #8.png" type="Texture" id=31]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 500 am.png" type="Texture" id=32]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 400 am.png" type="Texture" id=33]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 100 am.png" type="Texture" id=34]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 1000 pm.png" type="Texture" id=35]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 1100 pm.png" type="Texture" id=36]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars midnight.png" type="Texture" id=37]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/400 am.png" type="Texture" id=38]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/300 pm.png" type="Texture" id=39]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #3.png" type="Texture" id=40]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/100 am.png" type="Texture" id=41]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 600 am.png" type="Texture" id=42]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 400 pm.png" type="Texture" id=43]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 600 pm.png" type="Texture" id=44]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #5.png" type="Texture" id=45]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.1 moon/waning crescent moon/waning crescent moon 200 am.png" type="Texture" id=46]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 900 am.png" type="Texture" id=47]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 800 am.png" type="Texture" id=48]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun noon.png" type="Texture" id=49]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 1100 am.png" type="Texture" id=50]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 1000 am.png" type="Texture" id=51]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #1.png" type="Texture" id=52]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 100 pm.png" type="Texture" id=53]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #6.png" type="Texture" id=54]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 500 pm.png" type="Texture" id=55]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.1 moon/waning crescent moon/waning crescent moon 700 pm.png" type="Texture" id=56]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.1 moon/waning crescent moon/waning crescent moon 300 am.png" type="Texture" id=57]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 300 am.png" type="Texture" id=58]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.1 moon/waning crescent moon/waning crescent moon 100 am.png" type="Texture" id=59]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.1 moon/waning crescent moon/waning crescent moon 500 am.png" type="Texture" id=60]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.1 moon/waning crescent moon/waning crescent moon 400 am.png" type="Texture" id=61]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.1 moon/waning crescent moon/waning crescent moon 800 pm.png" type="Texture" id=62]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.1 moon/waning crescent moon/waning crescent moon 900 pm.png" type="Texture" id=63]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.1 moon/waning crescent moon/waning crescent moon 1000 pm.png" type="Texture" id=64]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.1 moon/waning crescent moon/waning crescent moon 1100 pm.png" type="Texture" id=65]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.1 moon/waning crescent moon/waning crescent moon midnight.png" type="Texture" id=66]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 600 am.png" type="Texture" id=67]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 600 pm.png" type="Texture" id=68]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #16.png" type="Texture" id=69]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #15.png" type="Texture" id=70]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #7.png" type="Texture" id=71]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 200 pm.png" type="Texture" id=72]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #2.png" type="Texture" id=73]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #10.png" type="Texture" id=74]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.2 sun/sun 700 am.png" type="Texture" id=75]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 700 pm.png" type="Texture" id=76]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/celestial/7.3 stars/stars 800 pm.png" type="Texture" id=77]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/400 pm.png" type="Texture" id=78]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/500 am.png" type="Texture" id=79]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/sky/500 pm.png" type="Texture" id=80]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #8.png" type="Texture" id=81]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #9.png" type="Texture" id=82]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #10.png" type="Texture" id=83]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #11.png" type="Texture" id=84]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #12.png" type="Texture" id=85]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #13.png" type="Texture" id=86]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #15.png" type="Texture" id=87]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #14.png" type="Texture" id=88]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #16.png" type="Texture" id=89]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #1.png" type="Texture" id=90]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/rain animation/rainfall frame #2.png" type="Texture" id=91]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #11.png" type="Texture" id=92]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #14.png" type="Texture" id=93]
[ext_resource path="res://interface/menus/overviews/weather/weather foreground/snow animation/snow frame #12.png" type="Texture" id=94]
[ext_resource path="res://interface/menus/overviews/weather/Weather Icon Set/rainyWeather.png" type="Texture" id=95]
[ext_resource path="res://interface/menus/overviews/weather/Weather Icon Set/sunnyWeather.png" type="Texture" id=96]
[ext_resource path="res://interface/menus/overviews/weather/Weather Icon Set/snowySunnyWeather.png" type="Texture" id=97]
[ext_resource path="res://interface/menus/overviews/weather/Weather Icon Set/cloudyWeather.png" type="Texture" id=98]
[ext_resource path="res://interface/menus/overviews/weather/Weather Icon Set/variableWeather.png" type="Texture" id=99]
[ext_resource path="res://interface/menus/overviews/weather/Weather Icon Set/stormyWeather.png" type="Texture" id=100]
[ext_resource path="res://interface/theme/panel/Overlay.png" type="Texture" id=101]
[ext_resource path="res://interface/menus/overviews/WeatherOverview.gd" type="Script" id=102]
[ext_resource path="res://interface/menus/overviews/WeatherOverviewBiome.gd" type="Script" id=103]
[ext_resource path="res://interface/menus/overviews/WeatherOverviewForcast.gd" type="Script" id=104]
[ext_resource path="res://interface/menus/overviews/WeatherOverviewDay.gd" type="Script" id=105]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 41 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 38 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 39 ), ExtResource( 78 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 34 ), ExtResource( 8 ), ExtResource( 58 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 7 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 53 ), ExtResource( 72 ), ExtResource( 10 ), ExtResource( 43 ), ExtResource( 55 ), ExtResource( 44 ), ExtResource( 56 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 59 ), ExtResource( 46 ), ExtResource( 57 ), ExtResource( 61 ), ExtResource( 60 ), ExtResource( 42 ), ExtResource( 75 ), ExtResource( 48 ), ExtResource( 47 ), ExtResource( 51 ), ExtResource( 50 ), ExtResource( 49 ) ],
"loop": true,
"name": "Sun",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 90 ), ExtResource( 91 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 88 ), ExtResource( 87 ), ExtResource( 89 ) ],
"loop": true,
"name": "Rain",
"speed": 10.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 73 ), ExtResource( 40 ), ExtResource( 12 ), ExtResource( 45 ), ExtResource( 54 ), ExtResource( 71 ), ExtResource( 31 ), ExtResource( 13 ), ExtResource( 74 ), ExtResource( 92 ), ExtResource( 94 ), ExtResource( 11 ), ExtResource( 93 ), ExtResource( 70 ), ExtResource( 69 ) ],
"loop": true,
"name": "Snow",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 98 ) ],
"loop": true,
"name": "Cloudy",
"speed": 5.0
}, {
"frames": [ ExtResource( 97 ) ],
"loop": true,
"name": "Snowy",
"speed": 5.0
}, {
"frames": [ ExtResource( 100 ) ],
"loop": true,
"name": "Stormy",
"speed": 5.0
}, {
"frames": [ ExtResource( 95 ) ],
"loop": true,
"name": "Rainy",
"speed": 5.0
}, {
"frames": [ ExtResource( 96 ) ],
"loop": true,
"name": "Sunny",
"speed": 5.0
}, {
"frames": [ ExtResource( 99 ) ],
"loop": true,
"name": "Variable",
"speed": 5.0
} ]

[node name="CalendarOverview" type="NinePatchRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.2923
margin_top = -600.0
margin_right = 461.292
rect_min_size = Vector2( 460, 600 )
texture = ExtResource( 101 )
region_rect = Rect2( 1.62054, -0.439278, 598.394, 334.569 )
patch_margin_left = 12
patch_margin_top = 33
patch_margin_right = 12
patch_margin_bottom = 21
script = ExtResource( 102 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.5175
margin_top = 55.0
margin_right = -172.483
margin_bottom = -51.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlePanel" parent="VBox" instance=ExtResource( 1 )]
margin_right = 400.0
margin_bottom = 120.0
title = "Stormy"

[node name="Label2" type="Label" parent="VBox"]
margin_top = 124.0
margin_right = 400.0
margin_bottom = 138.0
text = "Currently"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeatherBiome" type="TextureRect" parent="VBox"]
margin_top = 142.0
margin_right = 400.0
margin_bottom = 342.0
rect_min_size = Vector2( 400, 200 )
script = ExtResource( 103 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sky" type="AnimatedSprite" parent="VBox/WeatherBiome"]
position = Vector2( 196.479, 121.665 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
frame = 8

[node name="Stars" type="AnimatedSprite" parent="VBox/WeatherBiome"]
visible = false
position = Vector2( 193.855, 108.326 )
scale = Vector2( 3, 3 )
frames = SubResource( 2 )
frame = 4
playing = true

[node name="Sun" type="AnimatedSprite" parent="VBox/WeatherBiome"]
visible = false
position = Vector2( 188.869, 130.861 )
scale = Vector2( 3, 3 )
frames = SubResource( 3 )
animation = "Sun"
frame = 7
playing = true

[node name="Weather" type="AnimatedSprite" parent="VBox/WeatherBiome"]
position = Vector2( 198.564, 110.429 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "Rain"
frame = 3
playing = true

[node name="Forcast" type="HBoxContainer" parent="VBox"]
margin_top = 346.0
margin_right = 400.0
margin_bottom = 506.0
rect_min_size = Vector2( 380, 160 )
script = ExtResource( 104 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Today" type="Control" parent="VBox/Forcast"]
margin_right = 120.0
margin_bottom = 160.0
rect_min_size = Vector2( 120, 160 )
script = ExtResource( 105 )

[node name="Label" type="Label" parent="VBox/Forcast/Today"]
margin_right = 120.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 35 )
text = "Today"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeatherName" type="Label" parent="VBox/Forcast/Today/Label"]
margin_top = 35.0
margin_right = 120.0
margin_bottom = 50.0
rect_min_size = Vector2( 120, 15 )
custom_colors/font_color = Color( 0, 0.623529, 1, 1 )
text = "Stormy"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeatherIcon" type="AnimatedSprite" parent="VBox/Forcast/Today/Label"]
position = Vector2( 56, 100 )
frames = SubResource( 5 )
animation = "Rainy"

[node name="Day2" type="Control" parent="VBox/Forcast"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 160.0
rect_min_size = Vector2( 120, 140 )
script = ExtResource( 105 )

[node name="Label" type="Label" parent="VBox/Forcast/Day2"]
margin_right = 120.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 35 )
text = "Tomarrow"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeatherName" type="Label" parent="VBox/Forcast/Day2/Label"]
margin_top = 35.0
margin_right = 120.0
margin_bottom = 50.0
rect_min_size = Vector2( 120, 15 )
custom_colors/font_color = Color( 0, 0.623529, 1, 1 )
text = "Clear"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeatherIcon" type="AnimatedSprite" parent="VBox/Forcast/Day2/Label"]
position = Vector2( 56, 100 )
frames = SubResource( 5 )
animation = "Sunny"

[node name="Day3" type="Control" parent="VBox/Forcast"]
margin_left = 248.0
margin_right = 368.0
margin_bottom = 160.0
rect_min_size = Vector2( 120, 140 )
script = ExtResource( 105 )

[node name="Label" type="Label" parent="VBox/Forcast/Day3"]
margin_right = 120.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 35 )
text = "Day after next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeatherName" type="Label" parent="VBox/Forcast/Day3/Label"]
margin_top = 35.0
margin_right = 120.0
margin_bottom = 50.0
rect_min_size = Vector2( 120, 15 )
custom_colors/font_color = Color( 0, 0.623529, 1, 1 )
text = "Rainy"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeatherIcon" type="AnimatedSprite" parent="VBox/Forcast/Day3/Label"]
position = Vector2( 50, 90 )
frames = SubResource( 5 )
animation = "Rainy"
playing = true

[node name="Close" type="Button" parent="VBox"]
margin_top = 510.0
margin_right = 400.0
margin_bottom = 530.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBox/Close" to="." method="_on_Close_pressed"]
